--- a/css/style.css
+++ b/css/style.css
@@ -1041,6 +1041,11 @@ section h1 {
     font-size: 25px;
 }
 
+#events_tryst.updates embed {
+    width: 80vw;
+    height: 80vh;
+}
+
 #earthverse {
     margin: auto;
     width: 80vw;
@@ -1061,6 +1066,7 @@ section h1 {
     border: 4px solid white;
     border-radius: 20px;
     cursor: pointer;
+    transition: 1s ease;
 }
 
 #earthverse_2 {
@@ -1073,16 +1079,21 @@ section h1 {
     border: 4px solid white;
     border-radius: 20px;
     cursor: pointer;
+    transition: 1s ease;
 }
 
 #earthverse_1:hover {
-    border-radius: 20vh;
-    transition: 0.4s ease-in-out;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 1s ease;
 }
 
 #earthverse_2:hover {
-    border-radius: 20vh;
-    transition: 0.4s ease-in-out;
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: 1s ease;
 }
 
 #events.updates h1 {
@@ -1180,6 +1191,14 @@ bi {
     background-image: url('../Figures/earthverseQR.png');
     background-size: cover;
     width: 30vh;
+    transition: 1s;
+}
+
+#earthverse_QR:hover {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    transition: 1s ease;
 }
 
 #discussion.updates {
