update exes and layout

--- a/css/style.css
+++ b/css/style.css
@@ -785,7 +785,7 @@ section h1 {
     background-repeat: no-repeat;
 }
 .kirti_disp_pic {
-    background: url(../assets/images/team/KirtiBagri_DesignExecutive);
+    background: url(../assets/images/team/KirtiBagri_DesignExecutive.jpeg);
     background-size: 200px;
     background-repeat: no-repeat;
 }
