--- a/css/style.css
+++ b/css/style.css
@@ -483,6 +483,43 @@ section c {
     color: white;
 }
 
+.timer-card{
+    width: 100%;
+    padding: 20%;
+}
+
+.up_events{
+
+    background-image: url('../Figures/mars_river.jpg');
+    background-size: cover;
+    color: white;
+    background-position: center;
+    z-index: 0;
+    padding: 0;
+}
+
+.up_events_cover{
+    /* background-color: rgba(0, 0, 0, 0.8); */
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4));
+    background-size: cover;
+    z-index: 0;
+}
+
+.up_events_cover li{
+    margin: 10px 0 !important;
+    padding-left:1em !important;
+}
+.cur_event{
+    /* padding: 20%; */
+    padding: 0;
+    margin: 0;
+}
+
+.event_details{
+    padding-top: 20px;
+    font-size: 25px;
+}
+
 .about {
     padding-left: 0px;
     padding-right: 0px;
@@ -1761,7 +1798,7 @@ bi {
   .proj-row{
     height: 230px;
 }
-  .carousel-indicators li {
+  /* .carousel-indicators li {
       border-radius: 12px;
       width: 12px;
       height: 12px;
@@ -1778,7 +1815,7 @@ bi {
       max-width: 12px;
       margin: 0 3px;
       height: 12px;
-  }
+  } */
 
   
   .carousel-control-prev-icon {
