--- a/css/style.css
+++ b/css/style.css
@@ -484,8 +484,27 @@ section c {
 }
 
 .timer-card{
-    width: 100%;
-    padding: 20%;
+    max-width: 120px;
+    max-height: 100px;
+    min-width: 100px;
+    min-height: 100px;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 1);
+    border-width: 2px;
+    background-image: linear-gradient(60deg, rgb(157, 255, 0), rgb(157, 155, 0));
+    color: rgba(0, 0, 0, 1);
+    font-size: 60px;
+    font-weight: 500;
+    margin-right: 20px;
+    /* padding: 20%; */
+}
+
+.timer-card-caption{
+    color: rgba(0, 0, 0, 1);
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: -10px;
 }
 
 .up_events{
@@ -500,7 +519,7 @@ section c {
 
 .up_events_cover{
     /* background-color: rgba(0, 0, 0, 0.8); */
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4));
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.6));
     background-size: cover;
     z-index: 0;
 }
@@ -519,6 +538,7 @@ section c {
     padding-top: 20px;
     font-size: 25px;
 }
+
 
 .about {
     padding-left: 0px;
@@ -777,7 +797,7 @@ section h1 {
     flex: 1;
 }
 
-.card {
+.events .card {
     width: 100%;
     height: 100%;
     position: relative;
