--- a/css/style.css
+++ b/css/style.css
@@ -531,12 +531,34 @@ section c {
 .cur_event{
     /* padding: 20%; */
     padding: 0;
+    border-radius: 10px;
     margin: 0;
 }
 
 .event_details{
     padding-top: 20px;
     font-size: 25px;
+}
+
+.up_events_cover .button{
+    z-index: 100 !important;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid white;
+    cursor: pointer;
+    position: absolute;
+    font-size: 20px;
+    top: 58%;
+    right: 2%;
+}
+
+.up_events_cover .button .a{
+    text-decoration: none !important;   
+}
+
+.up_events_cover .button:hover {
+    border-color: rgba(0, 0, 0, 0);
+    transition: 0.3s ease;
 }
 
 
